# SayumiBunny

./: LICENSE  LICENSE.md  README.md  defaultstuff.py  main.py  perms.py  pyproject.toml
StuffsWeNeed/: defaultstuff.py  perms.py
StuffsWeNeed/jsons/: config.json  texts.json
cogs/: admin.py  economy.py  fun.py  help.py  miscellaneous.py  moderation.py
