[tool.poetry]
name = "KaitoBot"
version = "0.1.0"
description = "DiscordBot"
authors = ["Flo 流動#0003, Dok#4440"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
loguru = "^0.5.3"
pymongo = "^3.11.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
